--- a/lectures/1_intro.qmd
+++ b/lectures/1_intro.qmd
@@ -2,7 +2,7 @@
 title: "AQ 232 -- Fish population dynamics and stock assessment"
 subtitle: "Course Introduction"
 author: "Nyamisi Peter"
-date: "today"
+date: "2025-12-05"
 format: 
     revealjs:
       standalone: true
