--- a/lectures/2_data_used.qmd
+++ b/lectures/2_data_used.qmd
@@ -2,7 +2,7 @@
 title: "AQ 232 -- Fish population dynamics and stock assessment"
 subtitle: "Data used in stock assessment"
 author: "Nyamisi Peter"
-date: "today"
+date: "2025-12-08"
 format: 
     revealjs:
       standalone: true
