--- a/lectures/synopsis.qmd
+++ b/lectures/synopsis.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Content and Objectives"
 author: "Nyamisi Peter"
-date: "today"
+date: "2025-12-01"
 format: 
     revealjs:
       standalone: true
